added header elements

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>CSS Snippet Cheat Sheet</title>
   </head>
   <body>
-    <header>Header</header>
+    <header>
+      <h1></h1>
+      <div></div>
+    </header>
     <main>Main</main>
     <footer>Footer</footer>
   </body>
