--- a/index.html
+++ b/index.html
@@ -9,10 +9,106 @@
   </head>
   <body>
     <header>
-      <h1></h1>
-      <div></div>
+      <h1>CSS Snippet Cheatsheet</h1>
+      <p>
+        Ever have trouble recalling the exact syntax for your favourite CSS
+        code? Give it a permanent home and add it to this page! Select any
+        snippet below and it'll automatically select all of the code for you to
+        copy.
+      </p>
     </header>
-    <main>Main</main>
-    <footer>Footer</footer>
+    <main class="card__container">
+      <div class="card__item">
+        <header class="card__header"><h2>Flexbox Row</h2></header>
+        <p>Use these three properties to create a Flexbox row layout.</p>
+        <pre>
+.row {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+      </pre
+        >
+      </div>
+
+      <div class="card__item">
+        <header class="card__header"><h2>Flexbox Coloumn</h2></header>
+        <p>Use this to create a Flexbox coloumn layout.</p>
+        <pre>
+.column {
+  display: flex;
+  flex-direction: column;
+}
+      </pre
+        >
+      </div>
+
+      <div class="card__item">
+        <header class="card__header"><h2>CSS Grid Layout</h2></header>
+        <p>Build a 12-coloumn layout using CSS Grid</p>
+        <pre>
+.grid {
+  display: grid;
+  width: 100%;
+  grid-template-columns:
+repeat(12, 1fr);
+}
+      </pre
+        >
+      </div>
+
+      <div class="card__item">
+        <header class="card__header"><h2>Linear Gradients</h2></header>
+        <p>
+          This will create a background linear gradient from the top to bottom.
+        </p>
+        <pre>
+.linear-gradient-background {
+  background-image: linear-
+  gradient (
+    rgba(232, 102, 236, 0.3) 0%,
+    rgba(232, 102, 236, 0.6) 100%
+  );
+}
+      </pre
+        >
+      </div>
+
+      <div class="card__item">
+        <header class="card__header"><h2>Box Transition Glow</h2></header>
+        <p>Use transition and box shadows to glow on hover.</p>
+        <pre>
+.code-card .card-header {
+  border-radius: 8px;
+  transition: all 0.5s ease-in-
+out;
+}
+
+.code-card:hover,
+.code-card:hover .card-header {
+  box-shadow: inset 0px 0px 8px
+rgba(232, 102, 236, 1), 0 0 15px
+rgba(232, 102, 236, 1);
+}
+      </pre
+        >
+      </div>
+
+      <div class="card__item">
+        <header class="card__header"><h2>Overlay Card with Title</h2></header>
+        <p>
+          Use position properties and negative margins to raise elements higher
+          than their natural starting point.
+        </p>
+        <pre>
+.card-header {
+  position: relative;
+  margin-top: -20px;
+}
+      </pre
+        >
+      </div>
+    </main>
+    <footer><h2>Made with ❤️ and CSS</h2></footer>
   </body>
 </html>
