added colour palette

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>CSS Snippet Cheat Sheet</title>
   </head>
   <body>
+    <!-- document header -->
     <header>
       <h1>CSS Snippet Cheatsheet</h1>
       <p>
@@ -17,7 +18,9 @@
         copy.
       </p>
     </header>
+    <!-- flex container for snippets -->
     <main class="card__container">
+      <!-- snippet card item -->
       <div class="card__item">
         <header class="card__header"><h2>Flexbox Row</h2></header>
         <p>Use these three properties to create a Flexbox row layout.</p>
@@ -31,6 +34,7 @@
         >
       </div>
 
+      <!-- snippet card item -->
       <div class="card__item">
         <header class="card__header"><h2>Flexbox Coloumn</h2></header>
         <p>Use this to create a Flexbox coloumn layout.</p>
@@ -43,6 +47,7 @@
         >
       </div>
 
+      <!-- snippet card item -->
       <div class="card__item">
         <header class="card__header"><h2>CSS Grid Layout</h2></header>
         <p>Build a 12-coloumn layout using CSS Grid</p>
@@ -57,6 +62,7 @@ repeat(12, 1fr);
         >
       </div>
 
+      <!-- snippet card item -->
       <div class="card__item">
         <header class="card__header"><h2>Linear Gradients</h2></header>
         <p>
@@ -74,6 +80,7 @@ repeat(12, 1fr);
         >
       </div>
 
+      <!-- snippet card item -->
       <div class="card__item">
         <header class="card__header"><h2>Box Transition Glow</h2></header>
         <p>Use transition and box shadows to glow on hover.</p>
@@ -94,6 +101,7 @@ rgba(232, 102, 236, 1);
         >
       </div>
 
+      <!-- snippet card item -->
       <div class="card__item">
         <header class="card__header"><h2>Overlay Card with Title</h2></header>
         <p>
@@ -109,6 +117,8 @@ rgba(232, 102, 236, 1);
         >
       </div>
     </main>
+
+    <!-- document footer -->
     <footer><h2>Made with ❤️ and CSS</h2></footer>
   </body>
 </html>
